--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion23) precise; urgency=low
+
+  * better fix for #793 
+
+ -- Doug Burks <doug.burks@gmail.com>  Mon, 10 Aug 2015 05:50:48 -0400
+
 securityonion-capme (20121213-0ubuntu0securityonion22) precise; urgency=low
 
   * CapMe: Update for Bro 2.4 conn.log #793 
