--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion24) trusty; urgency=medium
+
+  * move to /var/www/html/ for trusty 
+
+ -- Doug Burks <doug.burks@gmail.com>  Thu, 01 Oct 2015 16:11:56 -0400
+
 securityonion-capme (20121213-0ubuntu0securityonion23) precise; urgency=low
 
   * better fix for #793 
