--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion26) trusty; urgency=medium
+
+  * move to /var/www/so/ 
+
+ -- Doug Burks <doug.burks@gmail.com>  Fri, 02 Oct 2015 15:02:06 -0400
+
 securityonion-capme (20121213-0ubuntu0securityonion25) trusty; urgency=medium
 
   * fix postinst to reference /var/www/html/ 
