--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion27) trusty; urgency=medium
+
+  * symlink using new location of /var/www/so 
+
+ -- Doug Burks <doug.burks@gmail.com>  Sun, 11 Oct 2015 19:23:06 -0400
+
 securityonion-capme (20121213-0ubuntu0securityonion26) trusty; urgency=medium
 
   * move to /var/www/so/ 
