--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion28) trusty; urgency=medium
+
+  * update cron job to remove old pcaps from /var/www/so 
+
+ -- Doug Burks <doug.burks@gmail.com>  Thu, 15 Oct 2015 18:56:41 -0400
+
 securityonion-capme (20121213-0ubuntu0securityonion27) trusty; urgency=medium
 
   * symlink using new location of /var/www/so 
