--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion29) trusty; urgency=medium
+
+  * change ELSA referer check from 3154 to elsa-query 
+
+ -- Doug Burks <doug.burks@gmail.com>  Fri, 30 Oct 2015 09:42:35 -0400
+
 securityonion-capme (20121213-0ubuntu0securityonion28) trusty; urgency=medium
 
   * update cron job to remove old pcaps from /var/www/so 
