--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion34) trusty; urgency=medium
+
+  * Add default date/time text for search and fix checkbox state issue. #12 
+
+ -- Doug Burks <doug.burks@gmail.com>  Tue, 16 Feb 2016 08:24:26 -0500
+
 securityonion-capme (20121213-0ubuntu0securityonion33) trusty; urgency=medium
 
   * PR #11 securityonion-capme: merge timestamp changes from Wes Lambert #862 
