--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion37) trusty; urgency=medium
+
+  * previous fix didn't work, try ping/pong 
+
+ -- Doug Burks <doug.burks@gmail.com>  Fri, 13 May 2016 14:40:24 -0400
+
 securityonion-capme (20121213-0ubuntu0securityonion36) trusty; urgency=medium
 
   * Issue 736: CapMe: Debug information occasionally gets rendered inside the transcript 
