--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion38) trusty; urgency=medium
+
+  * issues 736 and 738 
+
+ -- Doug Burks <doug.burks@gmail.com>  Sat, 14 May 2016 00:10:22 -0400
+
 securityonion-capme (20121213-0ubuntu0securityonion37) trusty; urgency=medium
 
   * previous fix didn't work, try ping/pong 
