--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion43) trusty; urgency=medium
+
+  * check for sguild failure needs to be more strict 
+
+ -- Doug Burks <doug.burks@gmail.com>  Thu, 19 May 2016 06:48:06 -0400
+
 securityonion-capme (20121213-0ubuntu0securityonion42) trusty; urgency=medium
 
   * CapMe: Handle sguild failure more gracefully #922 
