--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion44) trusty; urgency=medium
+
+  * Issue 493: CapMe: send credentials interactively to avoid exposing on command line 
+
+ -- Doug Burks <doug.burks@gmail.com>  Sat, 21 May 2016 05:55:16 -0400
+
 securityonion-capme (20121213-0ubuntu0securityonion43) trusty; urgency=medium
 
   * check for sguild failure needs to be more strict 
