--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion47) trusty; urgency=medium
+
+  * add Max Transcript Bytes to submission form 
+
+ -- Doug Burks <doug.burks@gmail.com>  Mon, 23 May 2016 15:59:05 -0400
+
 securityonion-capme (20121213-0ubuntu0securityonion46) trusty; urgency=medium
 
   * remove unnecessary delay 
