--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion50) trusty; urgency=medium
+
+  * when querying event table, only look for TCP events (ip_proto=6) 
+
+ -- Doug Burks <doug.burks@gmail.com>  Sun, 29 May 2016 14:32:28 -0400
+
 securityonion-capme (20121213-0ubuntu0securityonion49) trusty; urgency=medium
 
   * build parameters string dynamically to allow for empty parameters 
