more informative error message when failing on non-tcp traffic

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion52) trusty; urgency=medium
+
+  * more informative error message when failing on non-tcp traffic 
+
+ -- Doug Burks <doug.burks@gmail.com>  Mon, 30 May 2016 08:34:23 -0400
+
 securityonion-capme (20121213-0ubuntu0securityonion51) trusty; urgency=medium
 
   * include filename parameter for pivoting from Squert 
