--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion58) trusty; urgency=medium
+
+  * Issue 935: CapMe: improve input validation on stime and etime variables 
+
+ -- Doug Burks <doug.burks@gmail.com>  Fri, 03 Jun 2016 11:40:52 -0400
+
 securityonion-capme (20121213-0ubuntu0securityonion57) trusty; urgency=medium
 
   * Issue 934: CapMe: subdirectories should redirect to main page 
