--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion59) trusty; urgency=medium
+
+  * CapMe: replace include_once with require_once #936 
+
+ -- Doug Burks <doug.burks@gmail.com>  Fri, 03 Jun 2016 12:05:18 -0400
+
 securityonion-capme (20121213-0ubuntu0securityonion58) trusty; urgency=medium
 
   * Issue 935: CapMe: improve input validation on stime and etime variables 
