--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion63) trusty; urgency=medium
+
+  * fix Bro transcript to allow both TCP and UDP 
+
+ -- Doug Burks <doug.burks@gmail.com>  Fri, 25 Nov 2016 15:47:06 -0500
+
 securityonion-capme (20121213-0ubuntu0securityonion62) trusty; urgency=medium
 
   * CapMe needs to handle UDP better #492 
