--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion64) trusty; urgency=medium
+
+  * additional error handling 
+
+ -- Doug Burks <doug.burks@gmail.com>  Sat, 26 Nov 2016 14:47:15 -0500
+
 securityonion-capme (20121213-0ubuntu0securityonion63) trusty; urgency=medium
 
   * fix Bro transcript to allow both TCP and UDP 
