--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion75) xenial; urgency=medium
+
+  * securityonion-capme: update mysql calls Security-Onion-Solutions/security-onion#1479 
+
+ -- Doug Burks <doug.burks@gmail.com>  Mon, 11 Mar 2019 10:26:06 -0400
+
 securityonion-capme (20121213-0ubuntu0securityonion74) xenial; urgency=medium
 
   * securityonion-capme: update mysql calls Security-Onion-Solutions/security-onion#1479 
