--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+securityonion-capme (20121213-0ubuntu0securityonion77) xenial; urgency=medium
+
+  * add cmdproto to callback.php 
+
+ -- Doug Burks <doug.burks@gmail.com>  Fri, 03 May 2019 03:35:44 -0400
+
 securityonion-capme (20121213-0ubuntu0securityonion76) xenial; urgency=medium
 
   * update callback.php 
